# rustLink

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE.txt  README.md  docker-compose.yml
.claude/: settings.local.json
docs/: openapi.yaml  swagger-ui.html
migrations/: 001_initial.sql  002_add_users.sql  003_add_performance_indexes.sql
scripts/ralph/: prd.json  progress.txt
src/: admin.rs  auth.rs  cache.rs  config.rs  db.rs  error.rs  jobs.rs  main.rs  middleware.rs  middleware_impls.rs  models.rs  routes.rs  server.rs  state.rs  util.rs
src/config/: auth.rs  cache.rs  cors.rs  database.rs  mod.rs  rate_limit.rs  server.rs  url.rs
src/routes/: admin_handlers.rs  auth_handlers.rs  handlers.rs  health.rs  helpers.rs  mod.rs  router.rs  types.rs  url_handlers.rs
src/services/: mod.rs  short_code.rs
tasks/: prd-codebase-refactoring.md
tests/: api_tests.rs  config_tests.rs
