[package]
name = "rustlink"
version = "0.1.0"
edition = "2021"
description = "A high-performance URL shortener"
authors = ["rustLink"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
hyper = "1.5"
http = "1.2"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }

# Caching - using compatible versions
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.16"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenvy = "0.15"

# UUID generation
nanoid = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hash sets for rate limiting
dashmap = "6.1"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Authentication
jsonwebtoken = "9"
base64 = "0.22"
bcrypt = "0.16"

# Rate limiting
tower_governor = "0.8"

# URL validation
url = "2.5"

# Regex for validation
regex = "1.11"

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
http-body-util = "0.1"
axum-test = "17"
mockall = "0.13"
tempfile = "3"
